--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>April Template</title>
+    <title>HoogTopia</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
 	<script src="https://unpkg.com/animejs@2.2.0/anime.min.js"></script>
@@ -41,7 +41,7 @@
                         <h1 class="m-0">
                             <a href="#">
 								<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
-									<title>April</title>
+									<title>HoogTopia</title>
 								    <defs>
 								        <linearGradient x1="114.674%" y1="39.507%" x2="-52.998%" y2="39.507%" id="logo-a">
 								            <stop stop-color="#8D92FA" offset="0%"/>
@@ -77,8 +77,8 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <h1 class="hero-title mt-0">HoogTopia</h1>
+	                        <p class="hero-paragraph">De leukste, gezelligste en mooiste Minetopia server tot nu toe!</p>
 							<div class="hero-form field field-grouped">
 								<div class="control control-expanded">
 									<input class="input" type="email" name="email" placeholder="Your best email&hellip;">
@@ -296,8 +296,8 @@
                     <div class="features-inner section-inner">
                         <div class="features-header text-center">
                             <div class="container-sm">
-                                <h2 class="section-title mt-0">Meet April</h2>
-                                <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                                <h2 class="section-title mt-0">Bezoek HoogTopia</h2>
+                                <p class="section-paragraph">Minetopia is een van de tofste gamemodes van Minecraft! In deze gamemode speel je het echte leven na!</p>
                             </div>
                         </div>
 						<div class="features-wrap">
@@ -311,8 +311,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h4 class="feature-title h3-mobile mb-8">Members</h4>
+                                    <p class="text-sm">Onze bezoekers zijn vriendelijk. Word er snel een vriend mee!</p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing">
