--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h4 class="feature-title h3-mobile mb-8">Staff</h4>
+                                    <p class="text-sm">Niet alleen onze bezoekers zijn vriendelijk! Je kan altijd terecht bij onze stafleden voor vragen of lol.</p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing">
@@ -340,8 +340,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h4 class="feature-title h3-mobile mb-8">Gebouwen</h4>
+                                    <p class="text-sm">Ons bouwniveau ligt heel hoog (vandaar HoogTopia ). Onze server ziet er dus mooi uit en is leuk om in te spelen.</p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing">
@@ -354,8 +354,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h4 class="feature-title h3-mobile mb-8">Server</h4>
+                                    <p class="text-sm">Onze server is 99% van de tijd bereikbaar op het server/IP adres: HoogTopia.serv.nu</p>
                                 </div>
                             </div>
 						</div>
@@ -397,7 +397,7 @@
 				</div>
 				<div class="container">
 					<div class="testimonials-inner section-inner">
-						<h2 class="section-title mt-0 text-center">Testimonials</h2>
+						<h2 class="section-title mt-0 text-center">Tevreden?</h2>
 						<div class="testimonials-wrap">
 							<div class="testimonial text-xs is-revealing">
 								<div class="testimonial-inner">
@@ -406,12 +406,12 @@
 											<img class="mb-16" src="dist/images/testimonial-01.png" alt="Testimonial">
 										</div>
 										<div class="testimonial-body">
-											<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+											<p class="mb-0">'Leuke server! Een echte aanrader!'</p>
 										</div>
 									</div>
 									<div class="testimonial-footer">
 										<div class="testimonial-link">
-											<a href="#">@martajones</a>
+											<a href="http://www.conjurecraft.nl">Leemans Niels</a>
 										</div>
 									</div>
 								</div>
