--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 									</div>
 									<div class="testimonial-footer">
 										<div class="testimonial-link">
-											<a href="http://www.conjurecraft.nl">Leemans Niels</a>
+											<a href="#">Overbeeck Charlotte</a>
 										</div>
 									</div>
 								</div>
