--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 										</svg>
                                     </div>
                                     <h4 class="feature-title h3-mobile mb-8">Gebouwen</h4>
-                                    <p class="text-sm">Ons bouwniveau ligt heel hoog (vandaar HoogTopia ). Onze server ziet er dus mooi uit en is leuk om in te spelen.</p>
+                                    <p class="text-sm">Ons bouwniveau ligt heel hoog (vandaar HoogTopia ;] ). Onze server ziet er dus mooi uit en is leuk om in te spelen.</p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing">
