--- a/index.html
+++ b/index.html
@@ -423,12 +423,12 @@
 											<img class="mb-16" src="dist/images/testimonial-02.png" alt="Testimonial">
 										</div>
 										<div class="testimonial-body">
-											<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+											<p class="mb-0">'Hoe spelen jullie dat voor elkaar?'</p>
 										</div>
 									</div>
 									<div class="testimonial-footer">
 										<div class="testimonial-link">
-											<a href="#">@michealpahm</a>
+											<a href="#">@Leemans Niels</a>
 										</div>
 									</div>
 								</div>
@@ -440,12 +440,12 @@
 											<img class="mb-16" src="dist/images/testimonial-03.png" alt="Testimonial">
 										</div>
 										<div class="testimonial-body">
-											<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+											<p class="mb-0">'Ik voeld me op een andere wereld wanneer ik op jullie server zit. Geen zorgen, geen problemen. Gewoon wat geld verdienen met mijn baan.'</p>
 										</div>
 									</div>
 									<div class="testimonial-footer">
 										<div class="testimonial-link">
-											<a href="#">@markbrown</a>
+											<a href="#">@van Deghinste Mark</a>
 										</div>
 									</div>
 								</div>
@@ -459,16 +459,9 @@
                 <div class="container-sm">
                     <div class="newsletter-inner section-inner">
                         <div class="newsletter-header text-center">
-                            <h2 class="section-title mt-0">Stay in the know</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
-                        </div>
-                        <div class="footer-form newsletter-form field field-grouped">
-                            <div class="control control-expanded">
-                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
-                            </div>
-                            <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Early access</a>
-                            </div>
+                            <h2 class="section-title mt-0">HoogTopia</h2>
+                            <p class="section-paragraph">Server van HoogGeleid en JesseVeen.
+				Website mogelijk gemaakt door www.conjurecraft.nl.</p>
                         </div>
                     </div>
                 </div>
@@ -481,7 +474,7 @@
                     <div class="brand footer-brand">
                         <a href="#">
 							<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
-								<title>April</title>
+								<title>HoogTopia</title>
 								<defs>
 									<linearGradient x1="114.674%" y1="39.507%" x2="-52.998%" y2="39.507%" id="logo-footer-a">
 										<stop stop-color="#8D92FA" offset="0%"/>
