--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 April, all rights reserved</div>
+                    <div class="footer-copyright">&copy; ConjureCraft Minecraft server</div>
                 </div>
             </div>
         </footer>
