--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 									</div>
 									<div class="testimonial-footer">
 										<div class="testimonial-link">
-											<a href="#">@Leemans Niels</a>
+											<a href="#">Leemans Niels</a>
 										</div>
 									</div>
 								</div>
@@ -445,7 +445,7 @@
 									</div>
 									<div class="testimonial-footer">
 										<div class="testimonial-link">
-											<a href="#">@van Deghinste Mark</a>
+											<a href="#">van Deghinste Mark</a>
 										</div>
 									</div>
 								</div>
@@ -461,7 +461,7 @@
                         <div class="newsletter-header text-center">
                             <h2 class="section-title mt-0">HoogTopia</h2>
                             <p class="section-paragraph">Server van HoogGeleid en JesseVeen.
-				Website mogelijk gemaakt door www.conjurecraft.nl.</p>
+				    Website mogelijk gemaakt door: <a href="http://www.conjurecraft.nl">conjurecraft.nl</a></p>
                         </div>
                     </div>
                 </div>
