--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 											<img class="mb-16" src="dist/images/testimonial-03.png" alt="Testimonial">
 										</div>
 										<div class="testimonial-body">
-											<p class="mb-0">'Ik voeld me op een andere wereld wanneer ik op jullie server zit. Geen zorgen, geen problemen. Gewoon wat geld verdienen met mijn baan.'</p>
+											<p class="mb-0">'Ik voel me op een andere wereld wanneer ik op jullie server zit. Geen zorgen, geen problemen. Gewoon wat geld verdienen met mijn baan.'</p>
 										</div>
 									</div>
 									<div class="testimonial-footer">
