--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                         <div class="newsletter-header text-center">
                             <h2 class="section-title mt-0">HoogTopia</h2>
                             <p class="section-paragraph">Server van HoogGeleid en JesseVeen.
-				    Website mogelijk gemaakt door: <a href="http://www.conjurecraft.nl">conjurecraft.nl</a></p>
+				    Website mogelijk gemaakt door: <a href="http://www.conjurecraft.nl"><u>conjurecraft.nl</u></a></p>
                         </div>
                     </div>
                 </div>
